@@ -69,3 +69,6 @@
 2016-12-27 Fred Gleason <fredg@paravelsystems.com>
 	* Stubbed out support for registry-based configuration storage
 	in 'src/common/config.cpp'.
+2016-12-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added default parameter values for registry-based configuration
+	storage in 'src/common/config.cpp'.
